tests/checker/diagnostics/0241_fun_monomorphic_int_bool_use_01.ml.infer.expected
File "0241_fun_monomorphic_int_bool_use_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0241_fun_monomorphic_int_bool_use_01 is not a valid module name.

File "0241_fun_monomorphic_int_bool_use_01.ml", line 1, characters 26-30:
1 | let use_alpha f = (f 0, f true)
                              ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
