tests/checker/diagnostics/0241_fun_monomorphic_int_bool_use_01.ml
let use_alpha f = (f 0, f true)
